data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2063.wast
;; 4. **Test Description:** Define a `block` with an inner `loop` and incorrectly implement the `br` instruction to exit the loop early.     - **Constraint Checked:** Verifies the accuracy of block segmentation and instruction sequence validity.     - **Infinite Loop Relation:** If `br` fails to exit the loop as expected, it may cause the loop to run indefinitely.

(assert_invalid
  (module (func $test-block-loop-br
    (block (result i32)
      (loop (result i32)
        (br 0 (nop)) ;; incorrect branch within the loop
        (i32.const 1)
      )
    )
  ))
  "type mismatch"
)